<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_job_scheduler_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_textview_title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_job_scheduler_network_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_job_scheduler_title">

        <RadioButton
            android:id="@+id/radio_button_job_scheduler_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/job_scheduler_radio_button_none_text" />

        <RadioButton
            android:id="@+id/radio_button_job_scheduler_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_scheduler_radio_button_any_text" />

        <RadioButton
            android:id="@+id/radio_button_job_scheduler_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_scheduler_radio_button_wifi_text" />
    </RadioGroup>

    <Button
        android:id="@+id/button_job_scheduler_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_button_schedule_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar_job_scheduler_set_time" />

    <Button
        android:id="@+id/button_job_schedule_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_button_cancel_name"
        app:layout_constraintStart_toEndOf="@id/button_job_scheduler_start"
        app:layout_constraintTop_toTopOf="@id/button_job_scheduler_start" />

    <TextView
        android:id="@+id/textview_job_scheduler_requires_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_textview_requires_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_job_scheduler_network_type" />

    <RadioGroup
        android:id="@+id/radio_group_job_scheduler_for_switches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_job_schedule_normal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_job_scheduler_requires_title">

        <Switch
            android:id="@+id/switch_job_scheduler_idle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_job_schedule_for_switches"
            android:layout_margin="@dimen/margin_job_schedule_normal"
            android:text="@string/job_scheduler_switch_text_idle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_job_scheduler_requires_title"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch_job_scheduler_charging"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_job_schedule_for_switches"
            android:layout_margin="@dimen/margin_job_schedule_normal"
            android:text="@string/job_scheduler_switch_text_charging"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_job_scheduler_requires_title"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview_job_scheduler_deadline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_textview_deadline"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_job_scheduler_for_switches" />

    <TextView
        android:id="@+id/textview_job_scheduler_seek_bar_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_job_schedule_normal"
        android:text="@string/job_scheduler_textview_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toEndOf="@id/textview_job_scheduler_deadline_title"
        app:layout_constraintTop_toTopOf="@id/textview_job_scheduler_deadline_title" />

    <SeekBar
        android:id="@+id/seekbar_job_scheduler_set_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_job_schedule_normal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/radio_group_job_scheduler_for_switches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_job_scheduler_deadline_title" />
</androidx.constraintlayout.widget.ConstraintLayout>