<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_main_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_notification_name"
        app:layout_constraintBottom_toTopOf="@+id/button_main_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maim_button_alarm_name"
        app:layout_constraintBottom_toTopOf="@+id/button_main_job_scheduler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_notification" />

    <Button
        android:id="@+id/button_main_job_scheduler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_job_scheduler_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_alarm" />


</androidx.constraintlayout.widget.ConstraintLayout>