<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_notification_fragment_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_button_create_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_notification_fragment_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notification_fragment_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_button_update_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_notification_fragment_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_notification_fragment_create"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notification_fragment_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_button_cancel_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_notification_fragment_update"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>